# Heapify

./: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  idea.txt  trace.ndjson
crates/heapify-cli/: Cargo.toml
crates/heapify-cli/src/: app.rs  config.rs  json.rs  live.rs  main.rs  replay.rs  trace.rs
crates/heapify-core/: Cargo.toml
crates/heapify-core/src/: allocator_sources.rs  glibc.rs  heap_scan.rs  lib.rs  tcache.rs  tracker.rs
crates/heapify-debugger/: Cargo.toml
crates/heapify-debugger/src/: breakpoint.rs  lib.rs  maps.rs  process.rs  run_control.rs  snapshots.rs
crates/heapify-elf/: Cargo.toml
crates/heapify-elf/src/: lib.rs
docs/: architecture.md  json-trace.md
examples/: README.md  bin_candidate  bin_candidate.c  double_free  double_free.c  fastbin_candidate  fastbin_candidate.c  fastbin_chain  fastbin_chain.c  free_null  free_null.c  free_unknown  free_unknown.c  largebin_candidate  largebin_candidate.c  marker  marker.c  marker_pie  menu_heap  menu_heap.c  menu_script.txt  simple_calloc  simple_calloc.c  simple_malloc  simple_malloc.c  simple_realloc  simple_realloc.c  smallbin_candidate  smallbin_candidate.c  tcache_candidate  tcache_candidate.c  tcache_chain  tcache_chain.c  unsorted_candidate  unsorted_candidate.c
examples/corruption/: double_free  double_free.c  fastbin_dup_shape  fastbin_dup_shape.c  tcache_poison_shape  tcache_poison_shape.c  unsorted_fd_bk_shape  unsorted_fd_bk_shape.c
scripts/: build-examples.sh  smoke.sh  test-integration.sh  verify.sh
