[workspace]
members = [
    "crates/heapify-cli",
    "crates/heapify-core",
    "crates/heapify-debugger",
    "crates/heapify-elf",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/heapify/heapify"

[workspace.dependencies]
addr2line = { version = "0.24", default-features = false, features = ["std"] }
anyhow = "1"
clap = { version = "=4.4.18", features = ["derive"] }
crossterm = "0.27"
gimli = "0.31"
iced-x86 = "1.21"
indexmap = "=2.2.6"
libc = "0.2"
nix = { version = "0.29", features = ["process", "ptrace"] }
object = { version = "0.36", default-features = false, features = ["read", "elf", "std"] }
ratatui = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
