[package]
name = "heapify-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "heapify"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
heapify-core = { path = "../heapify-core" }
heapify-debugger = { path = "../heapify-debugger" }
heapify-elf = { path = "../heapify-elf" }
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
