[package]
name = "heapify-debugger"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
addr2line.workspace = true
anyhow.workspace = true
gimli.workspace = true
heapify-core = { path = "../heapify-core" }
heapify-elf = { path = "../heapify-elf" }
iced-x86.workspace = true
indexmap.workspace = true
libc.workspace = true
nix.workspace = true
object.workspace = true
serde.workspace = true
